# pepper

./: .coverage  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  justfile  my-second-brain-requirements.md  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/hooks/: pre_compact_flush.py  session_end_flush.py  session_start_context.py  shared.py
.claude/scripts/: reflect.py  spawn_session.py
.claude/skills/google/: SKILL.md
.claude/skills/google/scripts/: calendar.py  pg.py  pyproject.toml
.github/workflows/: ci.yml
Memory/: HABITS.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  OPERATIONS.md  SOUL.md  TASKS.md  USER.md
Memory/projects/niwc-atlantic/: STATUS.md
Memory/projects/niwc-atlantic/friday/: STATUS.md  notes.md  tasks.md
Memory/projects/niwc-atlantic/jazz/: STATUS.md  notes.md  tasks.md
Memory/projects/pepper/: STATUS.md  notes.md  tasks.md
Memory/projects/phd-embedded-ai/: STATUS.md  notes.md  tasks.md
channel/: pepper-channel.ts
docs/: BACKLOG.md  ROADMAP.md
docs/superpowers/plans/: 2026-04-04-pepper-foundation.md  2026-04-06-pepper-discord-mcp-scheduler.md  2026-04-06-pepper-google-skill.md  2026-04-06-pepper-init.md  2026-04-06-pepper-mvp-channel-discord.md  2026-04-07-discord-integration-move.md  2026-04-07-pepper-start-stop.md  2026-04-08-pipeline-daily-transcript.md  2026-04-09-credential-store.md
docs/superpowers/specs/: 2026-04-04-pepper-foundation-design.md  2026-04-06-pepper-discord-mcp-scheduler-design.md  2026-04-06-pepper-google-skill-design.md  2026-04-06-pepper-init-design.md  2026-04-06-pepper-mvp-channel-discord-design.md  2026-04-07-discord-attachments-design.md  2026-04-07-discord-integration-move-design.md  2026-04-07-pepper-start-stop-design.md  2026-04-08-pipeline-daily-transcript-design.md  2026-04-09-credential-store-design.md
integrations/discord/: .env.example  README.md  bot.py  config.py  discord_tools.py  embeds.py  pyproject.toml  scheduler.py  scheduler_tools.py
scripts/: start-pepper.bat  start-pepper.sh  stop-pepper.bat  stop-pepper.sh
src/pepper/: __init__.py  attachments.py  backup.py  cli.py  process.py
src/pepper/channel/: __init__.py  router.py  server.py
src/pepper/credentials/: __init__.py  cli.py  models.py  store.py
src/pepper/hooks/: __init__.py  pre_compact_flush.py  session_end_flush.py  session_start_context.py  shared.py
src/pepper/init/: __init__.py  generator.py
src/pepper/init/templates/: CLAUDE.md.j2  config.toml.j2  mcp.json.j2  playbook-README.md  settings.json.j2
src/pepper/integrations/: __init__.py
src/pepper/integrations/discord/: __init__.py  access.py  bot.py  chunking.py  config.py  discord_tools.py  jobs.yaml  mcp_server.py  scheduler.py  scheduler_tools.py  slash_commands.py  views.py
src/pepper/pipeline/: __init__.py  model.py  runner.py
src/pepper/pipeline/hooks/: __init__.py  transcript.py
src/pepper/scheduler/: __init__.py  config.py  core.py  jobs.yaml  mcp_server.py  tools.py
src/pepper/skills/coding/: SKILL.md  TEMPLATE.md
src/pepper/skills/coding/references/languages/: bash.md  cpp.md  csharp.md  go.md  java.md  javascript.md  kotlin.md  php.md  python.md  ruby.md  rust.md  sql.md  swift.md  typescript.md
src/pepper/skills/coding/references/libraries/: discordpy.md  pydantic.md  rich.md  typer.md
src/pepper/skills/creds/: SKILL.md
src/pepper/skills/google/: SKILL.md
src/pepper/skills/google/references/: calendar.md
src/pepper/skills/google/scripts/: auth.py  gcal.py  pg.py  pyproject.toml
src/pepper/skills/scheduler/: SKILL.md
tests/: conftest.py  test_attachments.py  test_channel_routing.py  test_cli_start.py  test_cli_stop.py  test_discord_embeds.py  test_discord_tools.py  test_google_auth.py  test_google_calendar.py  test_init.py  test_integration.py  test_pre_compact.py  test_process.py  test_pyqmd_integration.py  test_scheduler.py  test_scheduler_tools.py  test_session_end.py  test_session_start.py  test_shared.py  test_spawn.py
tests/integration/: test_channel_http.py  test_channel_routing.py  test_integration.py  test_pre_compact.py  test_session_end.py  test_session_start.py
tests/slow/: test_pyqmd_integration.py  test_spawn.py
tests/unit/: test_attachments.py  test_backup.py  test_channel_router.py  test_cli_start.py  test_cli_stop.py  test_credential_cli.py  test_credential_store.py  test_discord_access.py  test_discord_chunking.py  test_discord_embeds.py  test_discord_shutdown.py  test_discord_slash.py  test_discord_tools.py  test_google_auth.py  test_google_calendar.py  test_hooks_shared.py  test_init.py  test_pipeline_model.py  test_pipeline_runner.py  test_process.py  test_scheduler.py  test_scheduler_tools.py  test_shared.py  test_transcript_hook.py
