[project]
name = "pepper"
version = "0.1.0"
description = "Pepper Second Brain"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "filelock>=3.25.2",
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.0.0",
    "jinja2>=3.1.6",
    "mcp>=1.9.0",
    "psutil>=7.0.0",
    "pyqmd>=0.1.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "typer>=0.24.1",
    "watchdog>=6.0.0",
]

[project.scripts]
pepper = "pepper.cli:app"
pepper-channel = "pepper.channel.server:main"

[dependency-groups]
dev = [
    "aiosqlite>=0.20.0",
    "apscheduler>=4.0.0a5",
    "discord-py>=2.0",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.15.9",
    "sqlalchemy[asyncio]>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pepper"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = ["slow: tests that invoke real Claude Code sessions (cost API tokens)"]
