[project]
name = "pepper"
dynamic = ["version"]
description = "Pepper Second Brain"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "apscheduler>=4.0.0a5",
    "discord.py>=2.7.0",
    "filelock>=3.25.2",
    "jinja2>=3.1.6",
    "mcp>=1.9.0",
    "psutil>=7.0.0",
    "pyqmd>=0.1.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "sqlalchemy>=2.0.0",
    "typer>=0.24.1",
    "watchdog>=6.0.0",
]

[project.scripts]
pepper = "pepper.cli:app"
pepper-channel = "pepper.channel.server:main"
pepper-discord = "pepper.integrations.discord.mcp_server:run"
pepper-scheduler = "pepper.scheduler.mcp_server:run"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.19.0",
    "pip-audit>=2.6.0",
    "pre-commit>=4.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.0.0",
    "pytest-drill-sergeant>=0.4.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.9",
    "types-psutil>=7.2.2.20260402",
    "xenon>=0.9.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>.+)"

[tool.hatch.build.targets.wheel]
packages = ["src/pepper"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "B",     # flake8-bugbear
    "Q",     # flake8-quotes
    "SIM",   # flake8-simplify
    "C90",   # mccabe complexity
    "ARG",   # flake8-unused-arguments
    "TID",   # flake8-tidy-imports
    "UP",    # pyupgrade
    "PL",    # pylint
    "PERF",  # perflint
    "D",     # pydocstyle
    "RUF",   # ruff-specific rules
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",
    "D200", "D205", "D400", "D401", "D415",
    "ARG001", "ARG002", "ARG005",
    "PLC0415",  # deferred imports in test functions are normal
    "PLR2004",  # magic values in assertions are readable
    "PLW1510",  # subprocess.run without check — tests verify return codes
    "E501",     # long assertion messages and fixture data
    "F841",     # unused variables in test setup
    "PLR0913",  # test helpers with many kwargs
]
# Discord integration uses relative imports and has discord.py patterns
"src/pepper/integrations/discord/**/*.py" = [
    "TID252",   # relative imports by design (sub-package)
    "PLC0415",  # deferred imports to avoid circular/heavy imports at module level
    "PLR0913",  # discord.py callbacks have many params
    "PLR2004",  # HTTP status code comparisons
    "ARG001",   # unused args required by discord.py (server in lifespan)
    "ARG002",   # unused args required by discord.py (button in callbacks)
    "RUF006",   # asyncio.create_task without storing ref (fire-and-forget tasks)
]
"src/pepper/scheduler/**/*.py" = ["TID252"]
# Init generator uses deferred imports for optional dependencies
"src/pepper/init/generator.py" = ["PLC0415"]
# Channel server uses module-level globals for cross-thread state (intentional)
"src/pepper/channel/server.py" = ["PLW0603"]
# Skills contain standalone scripts not part of the main package
"src/pepper/skills/**/*.py" = ["D", "E501", "TID252", "ARG", "PL", "N", "C90"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.mccabe]
max-complexity = 10

# ---------------------------------------------------------------------------
# MyPy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "discord.*",
    "apscheduler.*",
    "mcp.*",
    "filelock.*",
    "httpx_sse.*",
]
ignore_missing_imports = true


# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests (isolated, no I/O)",
    "integration: Integration tests (may use localhost services)",
    "e2e: End-to-end tests (full system, may use network)",
    "slow: tests that invoke real Claude Code sessions (cost API tokens)",
]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
drill_sergeant_enforce_aaa = "false"
drill_sergeant_aaa_severity = "off"

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
# Standard requires 80%. Currently at 50% — runtime infrastructure
# (channel server, Discord bot, CLI process mgmt) needs test coverage.
# fail_under enforced in justfile after both unit + integration runs combine
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "__repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"

# ---------------------------------------------------------------------------
# drill-sergeant
# ---------------------------------------------------------------------------
[tool.drill_sergeant]
enforce_markers = true
marker_severity = "error"
enforce_aaa = false
aaa_severity = "off"
enforce_file_length = true
file_length_mode = "warn"
max_file_length = 500
