[project]
name = "pepper-discord"
version = "0.2.0"
description = "Pepper Discord integration — bot, MCP server, and scheduler"
requires-python = ">=3.12"
dependencies = [
    "discord.py>=2.7.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.2.0",
    "mcp>=1.0.0",
    "apscheduler>=4.0.0a1",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "pyyaml>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.24.0",
]
